Feat: Working tictactoe with threading mechanisms